# topografisk-gdb-api

./: .gitignore  CODEOWNERS  Dockerfile  README.md  alter_nibio_schema.sql  ar5.yaml  ar5_api_featurizers.sql  ar5_nibio_db_init.sql  docker-compose.override.yml  docker-compose.yml  init.sql  openapi.ar5.yaml  plot_data.py  pyproject.toml  test_process.sh
.github/workflows/: build-and-publish.yml  lint.yml
app/: config.py  database_manager.py  exception_handlers.py  main.py  postgis_backend.py  routes.py
app/db/: SQL.py  ar5_sql.py  dao.py  fkb_ar5_dao.py  fkb_bane_sql.py  jernbane_sql.py
app/models/: exceptions.py  fkb_ar5.py  fkb_bane.py  fkb_felles.py  ogc.py
app/processes/: ar5_processes.py
app/providers/: ar5_provider.py
app/services/: feature_service.py
app/sql/: ar5_db_nibio.sql  fkb_ar5.sql  fkb_bane.sql  fkb_felles.sql
app/utils/: routes_utils.py
process_descriptions/add_border_split_surface/: process_description.yaml
process_descriptions/add_border_split_surface/examples/: example-3-create-surface.json  example-4-split-surface.json
tests/: test_feature_service.py  test_models.py  test_routes.py
