[project]
name = "postgis-api"
version = "0.1.0"
description = "REST API for geographic features backed by PostGIS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "geojson-pydantic>=2.1.0",
    "orjson>=3.11.8",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

